--- a/src/Components/Category/Category.css
+++ b/src/Components/Category/Category.css
@@ -1,10 +1,16 @@
 .category{
-    height: 100vh;
+    min-height: 150vh;
     position:absolute;
     background-color: white;
     display: flex;
     flex-direction: column;
-    height: 100vh;
     width:100%;
     top:60px;
+}
+#bookList{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    transform-style: preserve-3d;
 }
