--- a/src/Components/Main menu/MainMenu.css
+++ b/src/Components/Main menu/MainMenu.css
@@ -5,6 +5,10 @@
     background-color:  #0d6dfd;
     color:white;
     box-shadow:0,0,10,10 rgba(255,255,255,0.85);
+    position: fixed;
+    width: 100%;
+    z-index: 0;
+    top:0;
 }
 #meni h1 {
     margin-left: 16%;
