--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -18,6 +18,7 @@
 {
     min-height:100vh;
     overflow-x: hidden;
+    z-index: 1;
 }
 #dashboardContainer
 {
@@ -28,7 +29,7 @@
 {
     position:fixed;
     width:300px;
-    height:100%;
+    height: 100%;
     background-color: var(--blue);
     border-left: 10px solid var(--blue);
     transition:0.5s;
@@ -44,6 +45,15 @@
     top:0;
     left:0;
     width:100%;
+}
+.dashboardNavigation ul h2{
+    margin-left: 20%;
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+.dashboardNavigation ul .title1.active{
+    display: none;
 }
 .dashboardNavigation ul li
 {
@@ -255,6 +265,7 @@
     width: 100%;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
+    overflow-x: auto;
 }
 
 .dashboardDetails{
