--- a/src/Pages/Genre/Show genre/ShowGenre.css
+++ b/src/Pages/Genre/Show genre/ShowGenre.css
@@ -98,13 +98,13 @@
     padding: 5px 20px;
     border:none;
     background-color:#f5f5f5;
-    color:var(--blue);
+    color:var(--black2);
     border-radius: 8px;
     transition: 0.5s;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
     border: 0.5px solid rgba(0, 0, 0, 0.01);
 }
 .showGenreBody table tbody tr td .showGenreDeleteBtn:hover{
-    background:var(--blue);
+    background:red;
     color: white;
 }
