--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -39,6 +39,7 @@
     font-size: larger;
     color: white;
     border-radius: 15px;
+    text-align: center;
 }
 .formData textarea{
     height: 60px;
