--- a/src/Pages/Genre/Edit genre/EditGenre.css
+++ b/src/Pages/Genre/Edit genre/EditGenre.css
@@ -6,3 +6,100 @@
     --black1:#222;
     --black2:#999;
 }
+.editGenrePage{
+    height:93vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#editGenreForm{
+    height:80%;
+    width:40%;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    border-radius: 25px;
+}
+#editGenreFields{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height:80%;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+#editGenreFields h1{
+    color:var(--blue);
+}
+.editGenreField{
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width:70%;
+}
+.editGenreField div{
+    width:100%;
+    display: flex;
+}
+.editGenreField span{
+    color:red;
+    margin-left: 30%;
+}
+.editGenreField label{
+    width:30%;
+    margin-right: 30px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+}
+.editGenreField div input{
+    width:60%;
+}
+.editGenreField div input , .editGenreField div textarea{
+    outline:1px solid rgba(0,0,0,0.08);
+    text-align: center;
+    border-radius: 5px;
+    margin-right: 20px;
+    transition: 0.5s;
+}
+.editGenreField textarea{
+    width:300px;
+    height:80px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.editGenreField div input:focus , .editGenreField div textarea:focus{
+    outline:1px solid var(--blue);
+}
+.editGenreField1{
+    width:20%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#editGenreBtns{
+    height:20%;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+#editGenreBtns a, #editGenreBtns button{
+    font-size: 25px;
+    text-decoration: none;
+    color: var(--black2);
+    padding:10px 50px;
+    border-radius: 10px;
+    border:none;
+    background: var(--grey);
+    width: 200px;
+    text-align: center;
+    transition: 0.5s;
+}
+#editGenreBtns a:hover, #editGenreBtns button:hover{
+    background: var(--blue);
+    color: var(--white);
+}
