--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -1,3 +1,50 @@
 #registerPage{
     margin-top: 60px;
+    
+    height:93.6vh;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-image: url("https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzV8fGFic3RyYWN0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+    background-size: 100% 100%;
+    object-fit: cover;
+}
+#registerForm{
+    
+    height: 50%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 25px;
+    background-image: url("https://images.unsplash.com/photo-1618005182384-a83a8bd57fbe?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTV8fGFic3RyYWN0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60");
+    object-fit: cover;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    border:1px solid black;
+}
+.registerField{
+    
+    min-width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.registerField label{
+    font-weight: 700;
+    width:50%;
+    text-align: center;
+    font-size: 20px;
+}
+.registerField input{
+    height:100%;
+    font-size: 18px;
+    width:50%;
+    outline: none;
+    border-radius: 10px;
+}
+#registerForm h1{
+    margin-bottom: 40px;
 }
